refactor(event): decompose public event service logic
A new helper class
EventStatsCollector is introduced to centralize the logic for
gathering event views and confirmed requests. This enhances
code organization and reusability for statistics-related operations.