@@ -10,9 +10,9 @@ import ru.practicum.main.event.dto.EventRequestStatusUpdateRequest;
 import ru.practicum.main.event.dto.EventRequestStatusUpdateResult;
 import ru.practicum.main.event.model.Event;
 import ru.practicum.main.event.repository.EventRepository;
+import ru.practicum.main.event.service.EventStatsCollector;
 import ru.practicum.main.exception.EventUpdateException;
 import ru.practicum.main.exception.NotFoundException;
-import ru.practicum.main.request.dto.ConfirmedRequestsCount;
 import ru.practicum.main.request.dto.ParticipationRequestDto;
 import ru.practicum.main.request.dto.mapper.RequestMapper;
 import ru.practicum.main.request.model.ParticipationRequest;
@@ -21,6 +21,7 @@ import ru.practicum.main.request.repository.RequestRepository;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
@@ -44,6 +45,9 @@ class EventServicePrivateChangeStatusUnitTest {
 
     @Mock
     private RequestMapper requestMapper;
+
+    @Mock
+    private EventStatsCollector eventStatsCollector;
 
     @InjectMocks
     private EventServicePrivateImpl eventService;
@@ -72,8 +76,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequestDto dto2 = ParticipationRequestDto.builder().id(101L).status(RequestStatus.CONFIRMED).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(List.of(new ConfirmedRequestsCount(eventId, 2L)));
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Map.of(eventId, 2L));
         when(requestRepository.findAllById(Set.of(100L, 101L))).thenReturn(List.of(req1, req2));
         when(requestMapper.toDtoOut(req1)).thenReturn(dto1);
         when(requestMapper.toDtoOut(req2)).thenReturn(dto2);
@@ -109,8 +112,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequestDto rejectedDto = ParticipationRequestDto.builder().id(102L).status(RequestStatus.REJECTED).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(List.of(new ConfirmedRequestsCount(eventId, 2L)));
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Map.of(eventId, 2L));
         when(requestRepository.findAllById(Set.of(100L))).thenReturn(List.of(targetReq));
         when(requestRepository.findAllByEventId(eventId)).thenReturn(List.of(targetReq, otherPendingReq));
         when(requestMapper.toDtoOut(targetReq)).thenReturn(confirmedDto);
@@ -145,8 +147,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequestDto dto2 = ParticipationRequestDto.builder().id(101L).status(RequestStatus.REJECTED).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(List.of(new ConfirmedRequestsCount(eventId, 1L)));
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Map.of(eventId, 1L));
         when(requestRepository.findAllById(Set.of(100L, 101L))).thenReturn(List.of(req1, req2));
         when(requestRepository.findAllByEventId(eventId)).thenReturn(List.of(req1, req2));
         when(requestMapper.toDtoOut(req1)).thenReturn(dto1);
@@ -178,8 +179,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequestDto rejectedDto = ParticipationRequestDto.builder().id(100L).status(RequestStatus.REJECTED).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(Collections.emptyList());
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Collections.emptyMap());
         when(requestRepository.findAllById(Set.of(100L))).thenReturn(List.of(req));
         when(requestMapper.toDtoOut(req)).thenReturn(rejectedDto);
 
@@ -251,8 +251,7 @@ class EventServicePrivateChangeStatusUnitTest {
                 .build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(List.of(new ConfirmedRequestsCount(eventId, 5L)));
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Map.of(eventId, 5L));
 
         EventUpdateException exception = assertThrows(EventUpdateException.class,
                 () -> eventService.changeRequestsStatus(userId, eventId, requestDto));
@@ -277,8 +276,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequest req1 = ParticipationRequest.builder().id(100L).status(RequestStatus.PENDING).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(Collections.emptyList());
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Collections.emptyMap());
         when(requestRepository.findAllById(Set.of(100L, 101L))).thenReturn(List.of(req1));
 
         NotFoundException exception = assertThrows(NotFoundException.class,
@@ -304,8 +302,7 @@ class EventServicePrivateChangeStatusUnitTest {
         ParticipationRequest req = ParticipationRequest.builder().id(100L).status(RequestStatus.CONFIRMED).build();
 
         when(eventRepository.findByIdAndInitiatorId(eventId, userId)).thenReturn(Optional.of(event));
-        when(requestRepository.countRequestsCountByEventIds(List.of(eventId), RequestStatus.CONFIRMED))
-                .thenReturn(Collections.emptyList());
+        when(eventStatsCollector.getConReqByEventMap(List.of(event))).thenReturn(Collections.emptyMap());
         when(requestRepository.findAllById(Set.of(100L))).thenReturn(List.of(req));
 
         EventUpdateException exception = assertThrows(EventUpdateException.class,
