@@ -11,20 +11,20 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import ru.practicum.main.category.dto.CategoryDto;
 import ru.practicum.main.category.repository.CategoryRepository;
 import ru.practicum.main.event.dto.EventShortDto;
 import ru.practicum.main.event.dto.mapper.EventMapper;
 import ru.practicum.main.event.model.Event;
 import ru.practicum.main.event.repository.EventRepository;
+import ru.practicum.main.event.service.EventStatsCollector;
 import ru.practicum.main.exception.NotFoundException;
-import ru.practicum.main.request.dto.ConfirmedRequestsCount;
-import ru.practicum.main.request.model.RequestStatus;
 import ru.practicum.main.request.repository.RequestRepository;
+import ru.practicum.main.user.dto.UserShortDto;
 import ru.practicum.main.user.model.User;
 import ru.practicum.main.user.repository.UserRepository;
 import ru.practicum.main.util.TestDataUtils;
 import ru.practicum.stats.client.StatsClient;
-import ru.practicum.stats.dto.ViewStatsDto;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -34,7 +34,6 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -47,6 +46,7 @@ class EventServicePrivateFindByInitiatorIdUnitTest {
     private static final Long USER_ID = 100L;
     private static final Long FIRST_EVENT_ID = 1L;
     private static final Long SECOND_EVENT_ID = 2L;
+
     @Mock
     private EventRepository eventRepository;
     @Mock
@@ -56,14 +56,17 @@ class EventServicePrivateFindByInitiatorIdUnitTest {
     @Mock
     private RequestRepository requestRepository;
     @Mock
-    private StatsClient statRepository;
-    // MapStruct warns against using Mappers.getMapper() for Spring-managed mappers.
-    // Suppressed here because factory instantiation is required to spy on the real mapper in unit tests without loading the Spring context.
+    private StatsClient statsRepository;
+    @Mock
+    private EventStatsCollector eventStatsCollector;
+
     @Spy
     @SuppressWarnings("all")
     private EventMapper eventMapper = Mappers.getMapper(EventMapper.class);
+
     @InjectMocks
     private EventServicePrivateImpl eventService;
+
     private User user;
     private Event firstEvent;
     private Event secondEvent;
@@ -90,110 +93,47 @@ class EventServicePrivateFindByInitiatorIdUnitTest {
     @DisplayName("Успешно возвращает лист ивентов по id пользователя")
     void shouldReturnListOfShortDtoByInitiatorId() {
         List<Event> events = List.of(firstEvent, secondEvent);
-        List<Long> eventIds = List.of(FIRST_EVENT_ID, SECOND_EVENT_ID);
-        List<String> uris = eventIds.stream().map(id -> String.format("/events/%d", id)).toList();
 
-        Long views = 999L;
+        EventShortDto shortDto1 = EventShortDto.builder()
+                .id(FIRST_EVENT_ID)
+                .title(firstEvent.getTitle())
+                .annotation(firstEvent.getAnnotation())
+                .paid(firstEvent.getPaid())
+                .eventDate(firstEvent.getEventDate())
+                .category(CategoryDto.builder().id(firstEvent.getCategory().getId()).build())
+                .initiator(UserShortDto.builder().id(USER_ID).build())
+                .views(999L)
+                .confirmedRequests(1L)
+                .build();
 
-        when(userRepository.findById(USER_ID))
-                .thenReturn(Optional.of(user));
-        when(eventRepository.findByInitiatorId(eq(USER_ID), any(Integer.class), any(Integer.class)))
-                .thenReturn(events);
-        when(statRepository.getStats(any(LocalDateTime.class), any(LocalDateTime.class), eq(uris), eq(true)))
-                .thenReturn(getViewStatsDto(eventIds, views));
-        when(requestRepository.countRequestsCountByEventIds(eventIds, RequestStatus.CONFIRMED))
-                .thenReturn(List.of(new ConfirmedRequestsCount(FIRST_EVENT_ID, 1L), new ConfirmedRequestsCount(SECOND_EVENT_ID, 2L)));
+        EventShortDto shortDto2 = EventShortDto.builder()
+                .id(SECOND_EVENT_ID)
+                .title(secondEvent.getTitle())
+                .annotation(secondEvent.getAnnotation())
+                .paid(secondEvent.getPaid())
+                .eventDate(secondEvent.getEventDate())
+                .category(CategoryDto.builder().id(secondEvent.getCategory().getId()).build())
+                .initiator(UserShortDto.builder().id(USER_ID).build())
+                .views(999L)
+                .confirmedRequests(2L)
+                .build();
 
-        List<EventShortDto> result = eventService.findAllByInitiatorId(USER_ID, 0, 10);
-
-        assertThat(result)
-                .hasSize(2)
-                .extracting(EventShortDto::getId)
-                .containsExactly(FIRST_EVENT_ID, SECOND_EVENT_ID);
-
-        assertThat(result.getFirst())
-                .returns(FIRST_EVENT_ID, EventShortDto::getId)
-                .returns(firstEvent.getTitle(), EventShortDto::getTitle)
-                .returns(firstEvent.getAnnotation(), EventShortDto::getAnnotation)
-                .returns(firstEvent.getPaid(), EventShortDto::getPaid)
-                .returns(firstEvent.getEventDate(), EventShortDto::getEventDate)
-                .returns(firstEvent.getCategory().getId(), dto -> dto.getCategory().getId())
-                .returns(firstEvent.getInitiator().getId(), dto -> dto.getInitiator().getId())
-                .returns(views, EventShortDto::getViews)
-                .returns(1L, EventShortDto::getConfirmedRequests);
-
-        assertThat(result.getLast())
-                .returns(SECOND_EVENT_ID, EventShortDto::getId)
-                .returns(secondEvent.getTitle(), EventShortDto::getTitle)
-                .returns(secondEvent.getAnnotation(), EventShortDto::getAnnotation)
-                .returns(secondEvent.getPaid(), EventShortDto::getPaid)
-                .returns(secondEvent.getEventDate(), EventShortDto::getEventDate)
-                .returns(secondEvent.getCategory().getId(), dto -> dto.getCategory().getId())
-                .returns(secondEvent.getInitiator().getId(), dto -> dto.getInitiator().getId())
-                .returns(views, EventShortDto::getViews)
-                .returns(2L, EventShortDto::getConfirmedRequests);
-
-        verify(userRepository, times(1)).findById(USER_ID);
-        verify(eventRepository, times(1)).findByInitiatorId(eq(USER_ID), Mockito.anyInt(), Mockito.anyInt());
-        verify(statRepository, times(1)).getStats(argThat(start -> start != null && !start.isAfter(firstEvent.getCreatedOn())), any(LocalDateTime.class), eq(uris), eq(true));
-        verify(requestRepository, times(1)).countRequestsCountByEventIds(eventIds, RequestStatus.CONFIRMED);
-
-        verifyNoMoreInteractions(userRepository, eventRepository, statRepository, requestRepository);
-        verifyNoInteractions(categoryRepository);
-    }
-
-    @Test
-    @DisplayName("Возврат DTO с нулевыми просмотрами и заявками, если их не было")
-    void shouldReturnZeroViewsAndRequestsWhenStatsEmpty() {
-        List<Event> events = List.of(firstEvent, secondEvent);
-        List<Long> eventIds = List.of(FIRST_EVENT_ID, SECOND_EVENT_ID);
-        List<String> uris = eventIds.stream().map(id -> String.format("/events/%d", id)).toList();
-
-        when(userRepository.findById(USER_ID))
-                .thenReturn(Optional.of(user));
-        when(eventRepository.findByInitiatorId(eq(USER_ID), any(Integer.class), any(Integer.class)))
-                .thenReturn(events);
-        when(statRepository.getStats(any(LocalDateTime.class), any(LocalDateTime.class), eq(uris), eq(true)))
-                .thenReturn(Collections.emptyList());
-        when(requestRepository.countRequestsCountByEventIds(eventIds, RequestStatus.CONFIRMED))
-                .thenReturn(Collections.emptyList());
+        when(userRepository.findById(USER_ID)).thenReturn(Optional.of(user));
+        when(eventRepository.findByInitiatorId(eq(USER_ID), any(Integer.class), any(Integer.class))).thenReturn(events);
+        when(eventStatsCollector.getShortDtoListWithStats(events)).thenReturn(List.of(shortDto1, shortDto2));
 
         List<EventShortDto> result = eventService.findAllByInitiatorId(USER_ID, 0, 10);
 
-        assertThat(result)
-                .hasSize(2)
-                .extracting(EventShortDto::getId)
-                .containsExactly(FIRST_EVENT_ID, SECOND_EVENT_ID);
-
-        assertThat(result.getFirst())
-                .returns(FIRST_EVENT_ID, EventShortDto::getId)
-                .returns(firstEvent.getTitle(), EventShortDto::getTitle)
-                .returns(firstEvent.getAnnotation(), EventShortDto::getAnnotation)
-                .returns(firstEvent.getPaid(), EventShortDto::getPaid)
-                .returns(firstEvent.getEventDate(), EventShortDto::getEventDate)
-                .returns(firstEvent.getCategory().getId(), dto -> dto.getCategory().getId())
-                .returns(firstEvent.getInitiator().getId(), dto -> dto.getInitiator().getId())
-                .returns(0L, EventShortDto::getViews)
-                .returns(0L, EventShortDto::getConfirmedRequests);
-
-        assertThat(result.getLast())
-                .returns(SECOND_EVENT_ID, EventShortDto::getId)
-                .returns(secondEvent.getTitle(), EventShortDto::getTitle)
-                .returns(secondEvent.getAnnotation(), EventShortDto::getAnnotation)
-                .returns(secondEvent.getPaid(), EventShortDto::getPaid)
-                .returns(secondEvent.getEventDate(), EventShortDto::getEventDate)
-                .returns(secondEvent.getCategory().getId(), dto -> dto.getCategory().getId())
-                .returns(secondEvent.getInitiator().getId(), dto -> dto.getInitiator().getId())
-                .returns(0L, EventShortDto::getViews)
-                .returns(0L, EventShortDto::getConfirmedRequests);
+        assertThat(result).hasSize(2);
+        assertThat(result.getFirst()).isEqualTo(shortDto1);
+        assertThat(result.getLast()).isEqualTo(shortDto2);
 
         verify(userRepository, times(1)).findById(USER_ID);
         verify(eventRepository, times(1)).findByInitiatorId(eq(USER_ID), Mockito.anyInt(), Mockito.anyInt());
-        verify(statRepository, times(1)).getStats(argThat(start -> start != null && !start.isAfter(firstEvent.getCreatedOn())), any(LocalDateTime.class), eq(uris), eq(true));
-        verify(requestRepository, times(1)).countRequestsCountByEventIds(eventIds, RequestStatus.CONFIRMED);
+        verify(eventStatsCollector, times(1)).getShortDtoListWithStats(events);
 
-        verifyNoMoreInteractions(userRepository, eventRepository, statRepository, requestRepository);
-        verifyNoInteractions(categoryRepository);
+        verifyNoMoreInteractions(userRepository, eventRepository, eventStatsCollector);
+        verifyNoInteractions(categoryRepository, requestRepository, statsRepository);
     }
 
     @Test
@@ -211,24 +151,19 @@ class EventServicePrivateFindByInitiatorIdUnitTest {
         verify(eventRepository, times(1)).findByInitiatorId(eq(USER_ID), Mockito.anyInt(), Mockito.anyInt());
 
         verifyNoMoreInteractions(userRepository, eventRepository);
-        verifyNoInteractions(categoryRepository, statRepository, requestRepository);
+        verifyNoInteractions(categoryRepository, statsRepository, requestRepository, eventStatsCollector);
     }
 
     @Test
     @DisplayName("NotFoundException если пользователь не найден")
     void shouldThrowNotFoundExceptionWhenUserNotFound() {
-        Mockito.when(userRepository.findById(USER_ID)).thenReturn(Optional.empty());
+        when(userRepository.findById(USER_ID)).thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> eventService.findAllByInitiatorId(USER_ID, 0, 10))
                 .isInstanceOf(NotFoundException.class);
 
-        Mockito.verify(userRepository, Mockito.times(1)).findById(USER_ID);
-
-        Mockito.verifyNoMoreInteractions(userRepository);
-        Mockito.verifyNoInteractions(eventRepository, categoryRepository, statRepository, requestRepository);
-    }
-
-    private List<ViewStatsDto> getViewStatsDto(List<Long> eventIds, Long views) {
-        return eventIds.stream().map(id -> String.format("/events/%d", id)).map(uri -> new ViewStatsDto("ewm", uri, views)).toList();
+        verify(userRepository, times(1)).findById(USER_ID);
+        verifyNoMoreInteractions(userRepository);
+        verifyNoInteractions(eventRepository, categoryRepository, statsRepository, requestRepository, eventStatsCollector);
     }
 }
